<?xml version="1.0" encoding="utf-8"?>
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@mipmap/ic_launcher"
    android:settingsActivity="org.bluezoo.gkos.SettingsActivity">
    <subtype
        android:label="@string/layout_en"
        android:imeSubtypeLocale="en"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=en" />
    <subtype
        android:label="@string/layout_fr"
        android:imeSubtypeLocale="fr"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=fr" />
    <subtype
        android:label="@string/layout_de"
        android:imeSubtypeLocale="de"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=de" />
    <subtype
        android:label="@string/layout_nl"
        android:imeSubtypeLocale="nl"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=nl" />
    <subtype
        android:label="@string/layout_es"
        android:imeSubtypeLocale="es"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=es" />
    <subtype
        android:label="@string/layout_pt"
        android:imeSubtypeLocale="pt"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=pt" />
    <subtype
        android:label="@string/layout_it"
        android:imeSubtypeLocale="it"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=it" />
    <subtype
        android:label="@string/layout_da"
        android:imeSubtypeLocale="da"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=da" />
    <subtype
        android:label="@string/layout_no"
        android:imeSubtypeLocale="no"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=no" />
    <subtype
        android:label="@string/layout_sv"
        android:imeSubtypeLocale="sv"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=sv" />
    <subtype
        android:label="@string/layout_fi"
        android:imeSubtypeLocale="fi"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=fi" />
    <subtype
        android:label="@string/layout_el"
        android:imeSubtypeLocale="el"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=el" />
    <subtype
        android:label="@string/layout_ru"
        android:imeSubtypeLocale="ru"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=ru" />
    <subtype
        android:label="@string/layout_ko"
        android:imeSubtypeLocale="ko"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=ko" />
    <subtype
        android:label="@string/layout_eo"
        android:imeSubtypeLocale="eo"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=eo" />
    <subtype
        android:label="@string/layout_et"
        android:imeSubtypeLocale="et"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=et" />
    <subtype
        android:label="@string/layout_is"
        android:imeSubtypeLocale="is"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=is" />
    <subtype
        android:label="@string/layout_uk"
        android:imeSubtypeLocale="uk"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="layout=uk" />
</input-method>
